--- a/app/src/main/res/layout/fragment_headlines.xml
+++ b/app/src/main/res/layout/fragment_headlines.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.NewsByTopicFragment">
+    tools:context=".ui.fragment.HeadlinesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvNewsByTopic"
