--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable
-            name="article"
-            type="com.litmus7.news.domain.Article" />
+        <variable name="article" type="com.litmus7.news.domain.Article" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
@@ -26,6 +24,7 @@
                 android:layout_height="@dimen/image_view_size_medium"
                 android:contentDescription="@string/news_image"
                 android:scaleType="centerCrop"
+                app:loadImage="@{article.urlToImage}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -39,6 +38,7 @@
                 android:layout_marginEnd="@dimen/default_size"
                 android:textAlignment="viewStart"
                 android:textStyle="italic"
+                android:text="@{article.source.name}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ivThumbnail"
@@ -53,6 +53,7 @@
                 android:layout_marginEnd="@dimen/default_size"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                android:text="@{article.title}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +67,7 @@
                 android:layout_marginStart="@dimen/default_size"
                 android:layout_marginEnd="@dimen/default_size"
                 android:layout_marginTop="25sp"
+                android:text="@{article.cleanPublishDate}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvNewsTitle"
