--- a/app/src/main/res/layout/activity_headlines.xml
+++ b/app/src/main/res/layout/activity_headlines.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,9 +21,9 @@
     <include
         android:id="@+id/error_layout"
         layout="@layout/layout_error"
-        tools:visibility="visible"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/default_size"
+        tools:visibility="visible" />
 </FrameLayout>
